2015-06-24  James Anderson  <anderson@gfz-potsdam.de>

	* src/vex2difx.cpp:
	* src/corrparams.cpp:
	* src/corrparams.h: bugfixes for RadioAstron compilation

2015-05-15  James Anderson  <anderson@gfz-potsdam.de>

	* src/vextables.h:
	* src/corrparams.h:
	* src/vextables.cpp:
	* src/vex2difx.cpp:
	* src/corrparams.cpp: bugfixes

2015-05-04  James Anderson  <anderson@gfz-potsdam.de>

	* src/vexload.cpp:
	* src/vex2difx.cpp: Bugfixes to make things compile

2015-04-20  James Anderson  <anderson@gfz-potsdam>

	* src/corrparams.cpp:
	* src/vex2difx.cpp:
	* src/vextables.cpp:
	* src/vextables.h:
	* src/corrparams.h: Changes to accommodate new delay server
	handling in calcif2


Version ?.?.?
* support for space VLBI processing added


Version 2.5.0
~~~~~~~~~~~~~
* Users can now supply comments in one or more COMMENT { } blocks
* In the ANTENNA { } blocks, one can specify  machine =  to force a datastream
  process to be run on a particular machine for a particular antenna.
  * NOTE: the global "machines" parameter must be set, from which missing
    antenna machine assignments and the usual head / core processor
    assignments will be drawn.
* outPath global parameter added: all .difx/ output gets put here rather than ./
* Split vex2difx.cpp into smaller pieces (in progress)
* If baseband data files are provided via file lists and some jobs have
  missing data, exlude antennas as necessary and write a "nodata" file
* Allow phase cal interval of 200 MHz (KVN) without warning since exraction works
* Fix guardNS calculation (finally!)...
  - Needed to consider bits per sample and number of baseband channels
  - Swiftly moving sources and/or antennas could still trigger this problem
* leap second file now optional for spice kernel evaluation.
  - If not provided, the EOPs from within the DifxInput structure will be used

Version 2.4.0
~~~~~~~~~~~~~
* Support axis offset argument for ANTENNAs
* Adapt to string-based networkPort in support of raw sockets